<resources>
    <string name="app_name">Riji</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="string_diary">日记</string>
    <string name="string_find">发现</string>
    <string name="string_msg">消息</string>
    <string name="string_my">我的</string>

    <string name="title_activity_reader">ReaderActivity</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">登录</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="login_hint">手机号/用户名</string>
    <string name="login_hint_userName">手机号/邮箱</string>
    <string name="login_hint_pass">密码</string>
    <string name="login_bt_hint">登 录</string>
    <string name="string_login_forget">忘记密码</string>
    <string name="string_login_register">注册新用户</string>
    <string name="string_getVirify">获取验证码</string>
    <string name="login_bt_virify">验证手机号</string>
    <string name="login_hint_phone">输入手机号</string>
    <string name="login_hint_virifyCode">验证码</string>
    <string name="register_hint_nick">请输入您的昵称</string>
    <string name="register_hint_pass">请输入密码</string>
    <string name="register_hint_repeat_pass">请再次输入您的密码</string>
    <string name="register_bt_hint"><![CDATA[马上分享每天的点点滴滴>>]]></string>
    <string name="string_register_passcontent_hint">密码由6-16位数字、字母或符号组成。</string>
    <string name="register_hint_newpass">请输入您的新密码</string>
    <string name="forget_bt_hint">忘记密码</string>
    <string name="string_modify_pass">修改密码</string>
    <string name="string_login_without_pass">动态验证码登录</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="string_login_top_hint">登录你的日记，记忆永不流逝</string>
    <string name="string_get_modify">获取验证码</string>
    <string name="string_login_bt_hint">验证登录</string>
    <string name="string_hint_more_waylogin">更多登录方式</string>
    <string name="string_gif">动图</string>
    <string name="string_video">视频</string>
    <string name="share">share</string>
    <string name="getArticle">push_articles</string>
    <string name="syn">syn</string>
    <string name="get_article_by_id">get_article</string>
    <string name="add_comment">add_comment</string>
    <string name="get_article_comments">get_article_comments</string>
    <string name="string_get_favorite">get_favorite_state</string>
    <string name="string_change_favorite">change_favorite_state</string>


</resources>
