<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".MVP.Login.LoginActivity">
    <LinearLayout
        android:id="@+id/id_rl_root"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/id_snackContainer"
        android:background="@color/colorGrayBackground"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="30dp"
            android:background="@color/white"
            android:focusable="true"
            android:focusableInTouchMode="true">

            <EditText
                android:id="@+id/id_ed_nick"
                style="@style/LoginEditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_centerVertical="true"
                android:hint="@string/register_hint_nick"
                android:lines="1" />


        </RelativeLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="1.5px"
            android:background="@color/white"
            android:focusable="true"
            android:focusableInTouchMode="true">

            <EditText
                android:id="@+id/id_ed_password"
                style="@style/LoginEditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_centerVertical="true"
                android:inputType="textPassword"
                android:hint="@string/register_hint_pass" />
        </RelativeLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="1.5px"
            android:background="@color/white"
            android:focusable="true"
            android:focusableInTouchMode="true">

            <EditText
                android:id="@+id/id_ed_repeat_pass"
                style="@style/LoginEditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_centerVertical="true"
                android:inputType="textPassword"
                android:hint="@string/register_hint_repeat_pass" />
        </RelativeLayout>

        <TextView
            android:text="@string/string_register_passcontent_hint"
            android:layout_marginTop="20dp"
            android:gravity="left"
            android:textSize="14sp"
            android:paddingLeft="19dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/id_bt_register"
            android:layout_width="match_parent"
            android:layout_height="43dp"
            android:layout_marginLeft="17dp"
            android:layout_marginRight="17dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/bg_bt_login"
            android:text="@string/register_bt_hint"
            android:textColor="@color/white"
            android:textSize="16sp" />
    </LinearLayout>

    <android.support.design.widget.CoordinatorLayout
        android:id="@+id/id_snackContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true" />
</RelativeLayout>
