<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MVP.Login.LoginFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MVP.Login.LoginActivity">


        <LinearLayout
            android:id="@+id/id_rl_root"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/id_snackContainer"
            android:background="@color/colorGrayBackground"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/id_headIcon"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="20dp"
                android:src="@mipmap/image" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="30dp"
                android:background="@color/white"
                android:focusable="true"
                android:focusableInTouchMode="true">

                <EditText
                    android:id="@+id/id_ed_username"
                    style="@style/LoginEditTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_centerVertical="true"
                    android:hint="@string/login_hint_userName" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="1.5px"
                android:background="@color/white"
                android:focusable="true"
                android:focusableInTouchMode="true">

                <EditText
                    android:id="@+id/id_ed_password"
                    style="@style/LoginEditTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_centerVertical="true"
                    android:hint="@string/login_hint_pass"
                    android:inputType="textPassword" />
            </RelativeLayout>

            <Button
                android:id="@+id/id_bt_login"
                android:layout_width="match_parent"
                android:layout_height="43dp"
                android:layout_marginLeft="17dp"
                android:layout_marginRight="17dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/bg_bt_login"
                android:text="@string/login_bt_hint"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <TextView
                    android:id="@+id/id_tv_forget"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="12dp"
                    android:text="@string/string_login_forget"
                    android:textColor="@color/colorPrimary"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/id_tv_register"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="12dp"
                    android:text="@string/string_login_register"
                    android:textColor="@color/colorPrimary"
                    android:textSize="12sp" />

            </RelativeLayout>
        </LinearLayout>

        <android.support.design.widget.CoordinatorLayout
            android:id="@+id/id_snackContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true" />
    </RelativeLayout>

</FrameLayout>
