<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".MVP.ModuleLogin.LoginActivity">


    <LinearLayout
        android:id="@+id/id_rl_root"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/id_snackContainer"
        android:background="@color/colorGrayBackground"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="30dp"
            android:background="@color/white"
            android:focusable="true"
            android:focusableInTouchMode="true">

            <EditText
                android:id="@+id/id_ed_phone"
                style="@style/LoginEditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_centerVertical="true"
                android:layout_marginRight="132dp"
                android:hint="@string/login_hint_phone"
                android:inputType="phone"
                android:lines="1" />

            <TextView
                android:id="@+id/id_tv_right_hint"
                android:layout_width="130dp"
                android:layout_height="40dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:gravity="center"
                android:text="@string/string_getVirify"
                android:textColor="@color/colorPrimary"
                android:textSize="15sp" />

            <View
                android:layout_width="1px"
                android:layout_height="36dp"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@+id/id_tv_right_hint"
                android:background="@color/colorGrayBackground" />
        </RelativeLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="1.5px"
            android:background="@color/white"
            android:focusable="true"
            android:focusableInTouchMode="true">

            <EditText
                android:id="@+id/id_ed_password"
                style="@style/LoginEditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_centerVertical="true"
                android:hint="@string/login_hint_virifyCode" />
        </RelativeLayout>

        <Button
            android:id="@+id/id_bt_virify"
            android:layout_width="match_parent"
            android:layout_height="43dp"
            android:layout_marginLeft="17dp"
            android:layout_marginRight="17dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/bg_bt_login"
            android:text="@string/login_bt_virify"
            android:textColor="@color/white"
            android:textSize="16sp" />
    </LinearLayout>

    <android.support.design.widget.CoordinatorLayout
        android:id="@+id/id_snackContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true" />
</RelativeLayout>
